Add option to provide a custom analysis.json file by system property (#164)